--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_image_compress: ^1.0.0
   firebase_app_check:
   material_design_icons_flutter: ^5.0.6595
+  lottie: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +72,7 @@ flutter:
     - assets/images/sec1.png
     - assets/images/sec2.png
     - assets/images/my.png
+    - assets/splash_lottie.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
